--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "test": "vitest"
+        "test": "vitest --allowOnly"
     },
     "keywords": [],
     "author": "seongbin",
     "license": "ISC",
     "dependencies": {
         "jest": "^29.7.0",
-        "vitest": "^3.0.5"
-    }
+        "vitest": "^3.2.4"
+    },
+    "packageManager": "pnpm@9.14.4+sha512.c8180b3fbe4e4bca02c94234717896b5529740a6cbadf19fa78254270403ea2f27d4e1d46a08a0f56c89b63dc8ebfd3ee53326da720273794e6200fcf0d184ab"
 }
